# safe-llm-finetune

./: .gitignore  LICENSE  Makefile  README.md  multitask_eval_debug.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.python
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.1-max-lora-finetune.ipynb  dpo_test.py  eval_testing.ipynb  lora_test.py  lora_test_all.ipynb  qlora_test.py
notebooks/test/eval_logs/: 2025-05-30T09-30-49+02-00_create-task_QaFyeM8HFqHmMreXHARhTB.eval  2025-05-30T09-32-47+02-00_create-task_JuUGZFLZeCDwNKHBWdhtYV.eval
pipeline/: README.md  dpo_main.py  full_main.py  lora_main.py  pyproject.toml  qlora_main.py  requirements.txt
pipeline/dpo_submit/: run.sh  train.sub
pipeline/full_submit/: run.sh  train.sub
pipeline/lora_submit/: run.sh  train.sub
pipeline/qlora_submit/: run.sh  train.sub
pipeline/safe_llm_finetune/datasets/: base.py  code_ultra_feedback.py
pipeline/safe_llm_finetune/evaluation/: __init__.py  airbench.py  base.py  codalbench.py  eval_analysis.py  metrics.py  multitaskbench.py  prompt_templates.py
pipeline/safe_llm_finetune/experiments/: base.py  supervised_test_full_finetune.py
pipeline/safe_llm_finetune/fine_tuning/: __init__.py  base.py  checkpoint.py
pipeline/safe_llm_finetune/scripts/: train.py
pipeline/safe_llm_finetune/utils/: helpers.py  logging.py
reports/figures/: plots.ipynb
results/: 20250523_162825_eval_results.csv  20250523_162825_eval_results.final.csv  20250523_163109_eval_results.csv
safe_llm_finetune/: __init__.py  dataset.py  features.py  plots.py
safe_llm_finetune/datasets/: CodeUltraFeedback.py  base.py  code_ultra_feedback.py
safe_llm_finetune/evaluation/: __init__.py  airbench.py  airbench_evaluator.py  base.py  codalbench.py  eval_analysis.py  metrics.py  multitaskbench.py  prompt_templates.py  templates.py
safe_llm_finetune/experiments/: __init__.py  base.py  test_full_finetune.py
safe_llm_finetune/fine_tuning/: base.py  checkpoint.py
safe_llm_finetune/fine_tuning/methods/: __init__.py  dpo.py  full_fine_tuning.py  (+3 more)
safe_llm_finetune/modeling/: predict.py  train.py
safe_llm_finetune/scripts/: train.py
safe_llm_finetune/utils/: helpers.py
test/eval_logs/: 2025-05-30T10-15-36+02-00_codal-instruction-following_EzhMwzfNg9e4GRujHbiMmA.eval  2025-05-30T10-16-25+02-00_codal-readability_NUT8Mqo5wPGLDN6GhWPavi.eval  2025-05-30T10-16-44+02-00_codal-complexity_BRNx5iJN6YPwrfKbAUxtMe.eval  2025-05-30T10-17-06+02-00_codal-style_GSJSCqqz9b56qo2TEtY3Uy.eval  2025-05-30T10-17-28+02-00_codal-explanation_EbXzYrwg9EeswDSqwvpKbZ.eval  logs.json
tests/: test_basic.py
(+13 files in other folders)
