[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "safe_llm_finetune"
version = "0.0.1"
description = "Testing different fine-tuning methods on benign data and evaluating model safety to determine which method best preserves or improves safety characteristics in LLMs."
authors = [
  { name = "Max Ramackers" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "==3.13.3"


[tool.ruff]
line-length = 99
src = ["safe_llm_finetune"]
include = ["pyproject.toml", "safe_llm_finetune/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["safe_llm_finetune"]
force-sort-within-sections = true

