[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "safe_llm_finetune"
version = "0.0.1"
description = "Testing different fine-tuning methods on benign data and evaluating model safety to determine which method best preserves or improves safety characteristics in LLMs."
authors = [
  { name = "Max Ramackers" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "bitsandbytes>=0.45.5; platform_system=="Linux",
    "inspect-ai>=0.3.94",
    "ipython",
    "ipywidgets",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "openai>=1.78.0",
    "pandas",
    "peft>=0.15.2",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "torch>=2.7.0",
    "tqdm",
    "transformers>=4.51.3",
    "trl>=0.17.0",
    "typer",
    "wandb"
]
requires-python = ">=3.10"


[tool.ruff]
line-length = 99
src = ["safe_llm_finetune"]
include = ["pyproject.toml", "safe_llm_finetune/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["safe_llm_finetune"]
force-sort-within-sections = true

[tool.uv.sources]
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals" }

